--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#C4CFD5"
-        tools:context=".RegistroActivity">
+        tools:context=".ui.registro.RegistroActivity">
 
         <TextView
             android:id="@+id/titulo_text_view"
